still trying to fix spacing issues not on local

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,6 @@ html, body {
     line-height: 24px;
 }
 
-@media only screen and (max-width: 61.5em)
-body {
-}
-
 @
 html {
     position: relative;
@@ -28,21 +24,21 @@ body {
 body {
     font-size: 1.2em;
     margin: 0.5 auto;
-		max-width: 60%;
-		padding: 1em;
+    max-width: 60%;
+    padding: 1em;
 }
 
 h1,
 h2,
 h3 {
-		font-family: 'Bad Script', cursive;
-		color: #222;
+    font-family: 'Bad Script', cursive;
+    color: #222;
 }
 
 h1 {
     font-size: 2.5em;
     line-height: 2em;
-		margin: 1px 6px;
+    margin: 1px 6px;
 }
 
 h2 {
